# Hello_CMake-GTest

./: CMakeLists.txt  Example.cpp  Example.h  README.md
test/: CMakeLists.txt  ExampleTests.cpp
